<resources>
    <string name="app_name">UniApp</string>
    <string name="matricola">Matricola:</string>
    <string name="cognome">Cognome:</string>
    <string name="nome">Nome:</string>
    <string name="cfu">CFU:</string>
    <string name="media">Media:</string>
    <string name="filtro">Filtro:</string>
    <string name="filtra">Filtra</string>
    <string name="aiuto_filtro">prefisso matricola</string>
    <string name="filtro_corto">Il filtro deve contenere almeno tre caratteri</string>
    <string name="hintMatricola">matricola</string>
    <string name="hintCognome">cognome</string>
    <string name="hintNome">nome</string>
    <string name="hintCFU">crediti</string>
    <string name="hintMedia">media</string>
    <string name="dati_obbligatori">Tutti i dati sono obbligatori</string>
    <string name="itemEdit">Modifica</string>
    <string name="itemDelete">Elimina</string>
</resources>
