<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaStudentiActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/filtro"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/editPrefisso"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPrefisso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/aiuto_filtro"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFiltra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/filtra"
        app:layout_constraintBaseline_toBaselineOf="@+id/editPrefisso"
        app:layout_constraintStart_toEndOf="@+id/editPrefisso" />

    <ListView
        android:id="@+id/listaStudenti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrefisso" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAggiungi"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/ic_add_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>